# aoc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aoc2016/: Cargo.toml
aoc2016/src/: .gitignore  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
aoc2020/: day23.py  day24.py  day25.py
aoc2021/: aoc_utils.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day23_parttwo.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  dayXX.py
aoc2022/: day10.py  day12.py  day13.py  day15.py  day18.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoctool/: cli.py
