[tool.poetry]
name = "aoctool"
version = "0.1.0"
description = "Create a template file"
authors = ["Antoine Beyeler <abeyeler@ab-ware.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "aoctool"}
]

[tool.poetry.scripts]
aoctool = 'aoctool.cli:main'


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
numpy= ">=1.21.4"
scipy=">=1.7.3"
matplotlib=">=3.5.1"
advent-of-code-data=">=1.1.0"
rich=">=10.15.2"
scikit-image=">=0.19.0"
tqdm=">=4.62.3"
networkx=">=2.6.3"
multiprocess=">=0.70.12.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 95
src_paths = ["aoc2021"]

[tool.pytest.ini_options]


[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
files = "aoc2021"