[package]
name = "aoc2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = "0.5.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
md5 = "0.7.0"
ndarray = "0.15.6"
rayon = "1.6.1"
regex = "1.7.1"
